--- a/src/main/resources/com/example/prog2lab1arpan/hello-view.fxml
+++ b/src/main/resources/com/example/prog2lab1arpan/hello-view.fxml
@@ -9,15 +9,16 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <Pane prefHeight="300.0" prefWidth="450.0">
-      <children>
-         <TableView layoutX="230.0" layoutY="50.0" prefHeight="200.0" prefWidth="227.0">
-           <columns>
-             <TableColumn fx:id="id" prefWidth="75.0" text="ID" />
-             <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
-               <TableColumn fx:id="sinNumber" prefWidth="75.0" text="SinNumber" />
-           </columns>
-         </TableView>
-         <Button layoutX="318.0" layoutY="261.0" mnemonicParsing="false" text="Get data" onAction="#getData"/>
-      </children>
+        <children>
+            <TableView fx:id="table_view" layoutX="167.0" layoutY="50.0" prefHeight="200.0" prefWidth="300.0">
+                <columns>
+                    <TableColumn fx:id="id" prefWidth="75.0" text="ID" />
+                    <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
+                    <TableColumn fx:id="sinNumber" prefWidth="75.0" text="Sin Number" />
+                    <TableColumn fx:id="age" prefWidth="75.0" text="Age"/>
+                </columns>
+            </TableView>
+            <Button layoutX="286.0" layoutY="261.0" mnemonicParsing="false" onAction="#getData" text="Get data" />
+        </children>
     </Pane>
 </VBox>
